Fix streaming UI issue and add comprehensive screenshot analysis features
- Fixed streaming response not displaying in chat UI by correcting event type detection
- Added proper SSE parsing with fallback to regular JSON responses
- Implemented real-time streaming content updates with React state management
- Added WebSocket integration for global screenshot capture via Ctrl+S
- Created modular services: keyboard, screenshot, clipboard, websocket
- Added image compression utility to reduce OpenAI API costs
- Moved hardcoded prompts to separate prompt files for better maintainability
- Enhanced error handling and debugging with detailed console logging
- Added mobile setup documentation and wireless network access guides
- Improved cost tracking and display for image analysis operations
- Updated model from gpt-4o-mini to gpt-4o for better image analysis quality
- Added comprehensive fallback mechanisms for robust streaming experience

--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "clipboardy": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.1",
+    "node-global-key-listener": "^0.1.1",
     "openai": "^4.71.0",
     "postcss-nesting": "^13.0.2",
     "postcss-preset-env": "^10.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-feather": "^2.0.10",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "ws": "^8.18.0"
+    "sharp": "^0.34.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.3",
